[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "traffic-signal-control"
version = "1.0.0"
description = "Autonomous Traffic Signal Control — OpenEnv Hackathon (Meta x PyTorch x HuggingFace)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "gymnasium>=1.0.0",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.setuptools.package-data]
"*" = ["openenv.yaml"]
